specifics.css
@page {
  margin-top: 1cm;
  margin-right: 1cm;
  margin-bottom: 1cm;
  margin-left: 0.1cm; 
}

.section {
  margin-top: 0.3em; 
  margin-bottom: 0.3em;  
}

.titles h3 {
  margin-bottom: 0.2em;
}

.titles p {
  margin-top: 0;
  margin-bottom: 0.2em;
}

.aside {
  padding-top: 0;  
  margin-top: 0;
  padding-left: 0.9cm;
  padding-right: 0cm; 
}

.aside img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1em;
  border-radius: 50%; 
  width: 80%;
  object-fit: cover;
}

.aside h2 {
  text-align: center;
}

.aside h3 {
  margin-bottom: 0em;
  margin-top: 0em;
}

.aside ul,
.aside p {
  text-align: left; 
  margin-top: 0em;      
  margin-bottom: 0.5em; 
}

.aside > :first-child {
  margin-top: 0;  
}

#contact .fa {
  width: 1.2em;  
  text-align: center;  
  margin-right: 0.3em;
}


.aside .section {
  margin-top: 0em;    
  margin-bottom: 0em;
}

.aside .section:first-of-type {
  margin-top: 1em;  
  margin-bottom: 0.5em;
}

#contact,
#contact a {
  color: #333;
}

.main h3 {
  margin-top: 0.5em;
  margin-bottom: 0.2em;
}

.main ul {
  margin-top: 0.3em;
  margin-bottom: 0.5em;
}

.main li {
  margin-bottom: 0.2em;
}

